--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </nav>
 
 <!-- submit story form -->
-<form action="#" id="submit-story-form" class="form-container container" method="post">
+<form id="submit-story-form" class="form-container container">
   author <input type="text" name="author" id="author" placeholder="author name">
   title <input type="text" name="title" id="title" placeholder="story title">
   url <input type="url" name="url" id="story-url" placeholder="story url">
