--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
-  <div class="nav-link">
-    <span>|</span>
+  <div class="nav-link main-nav-links hidden">
+    |
     <a class="nav-link" href="#" id="nav-submit-story">submit</a>
-    <span>|</span>
+    |
     <a class="nav-link" href="#" id="nav-favorites">favorites</a>
-    <span>|</span>
+    |
     <a class="nav-link" href="#" id="nav-my-stories">my stories</a>
   </div>
   <div class="nav-right">
@@ -80,10 +80,10 @@
   <ol id="all-stories-list" class="stories-list"></ol>
 
   <!-- List for favorite stories -->
-  <ol id="favorites-list" class="stories-list"></ol>
+  <ol id="favorites-list" class="stories-list hidden"></ol>
 
   <!-- List of currentUser stories -->
-  <ol id="user-stories" class=""></ol>
+  <ol id="user-stories" class="hidden stories-list"></ol>
 
 </section>
 
@@ -126,6 +126,23 @@
     </div>
     <button type="submit">create account</button>
   </form>
+</section>
+
+<!-- User Profile  -->
+<section id="user-profile" class="hidden">
+  <div class="user-profile-box container">
+    <h4>User Profile</h4>
+    <section>
+      <div>Name: <span id="profile-name">Name:</span></div>
+      <div>Username: <span id="profile-username">Username:</span></div>
+    </section>
+    <form action="#" id="edit-user">
+      <label for="name">Name: <input type="text" name="name" id="edit-name" placeholder="Enter new name"></label>
+      <label for="username">Username: <input type="text" name="username" id="edit-username" placeholder="Enter new username"></label>
+      <label for="password">Password: <input type="text" name="password" id="edit-password" placeholder="Enter new password"></label>
+      <button type="submit">Enter</button>
+    </form>
+  </div>
 </section>
 
 <!-- Library JS & our JS -->
